--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,51 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li {
+  list-style: none;
+}
+
+body {
+  background-color: #bac8c6;
+}
+
+p {
+  color: #494544;
+}
+
+.header {
+  background-color: #494544;
+  width: 100%;
+  height: 80px;
+  text-align: center;
+  display: flex;
+  padding: 20px;
+}
+
+.header-logo {
+  margin: 0 60px 0 10px;
+  color: gray;
+}
+
+.header-list {
+  display: flex;
+  padding: 5px 0;
+}
+
+.header-li {
+  margin: 0 auto;
+  color: gray;
+}
+
+.header-list-item {
+  padding-right: 30px;
+  font-size: 18px;
+}
