--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,15 +1,30 @@
-<h1>商品一覧</h1>
 
-<%= link_to "商品新規登録", new_admin_item_path %>
-
-
-<% @items.each do |item| %>
-  <div>
-    <%= attachment_image_tag item, :image %>
-    <p>商品ID：<%= item.id %></p>
-    <%= link_to admin_item_path(item.id) do %>
-      <p>商品名：<%= item.name %></p>
-    <% end %>
-    <p>税抜価格：<%= item.price %></p>
+  <div class="contents">
+    <h1 class="contents-title">商品一覧</h1>
+    <p class="new-item">
+      <a href="/admin/items/new">商品新規登録</a>
+    </p>
+    <nav class="item-column">
+      <ul>
+        <li>商品ID</li>
+        <li>商品名</li>
+        <li>税抜価格</li>
+        <li>ジャンル</li>
+        <li>ステータス</li>
+      </ul>
+    </nav>
+    <div class="item-list">
+      <% @items.each do |item| %>
+        <ul>
+          <%= attachment_image_tag item, :image %>
+          <li><%= item.id %></li>
+          <%= link_to admin_item_path(item.id) do %>
+            <li><%= item.name %></li>
+          <% end %>
+          <li><%= item.price %>円</li>
+          <li>ジャンル</li>
+          <li>ステータス</li>
+        </ul>
+      <% end %>
+    </div>
   </div>
-<% end %>
