--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,50 +11,63 @@
 
   <body>
     <header>
-      <% if admin_signed_in? %>
-        <li>
-          <%= link_to "商品一覧", admin_items_path %>
-        </li>
-        <li>
-          <%= link_to "会員一覧", admin_customers_path %>
-        </li>
-        <li>
-          <%= link_to "注文履歴", admin_root_path %>
-        </li>
-        <li>
-          <%= link_to "ジャンル一覧", admin_genres_path %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-        </li>
-      <% elsif customer_signed_in? %>
-        <li>
-          <%= link_to "マイページ", customer_path(current_customer.id) %>
-        </li>
-        <li>
-          <%= link_to "商品一覧", items_path %>
-        </li>
-        <li>
-          <%= link_to "カート", cart_items_path %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-        </li>
+      <div class="header">
+        <h2>
+          <a class="header-logo" href="/">NAGANO_CAKE</a>
+        </h2>
+        <nav class="nav-header-list">
+          <ul class="header-list">
+            <% if admin_signed_in? %>
+              <li class="header-list-item">
+                <%= link_to "商品一覧", admin_items_path %>
+              </li>
+              <li class="header-list-item">
+                <%= link_to "会員一覧", admin_customers_path %>
+              </li>
+              <li class="header-list-item">
+                <%= link_to "注文履歴", admin_root_path %>
+              </li>
+              <li class="header-list-item">
+                <%= link_to "ジャンル一覧", admin_genres_path %>
+              </li>
+              <li class="header-list-item">
+                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+              </li>
+            <% elsif customer_signed_in? %>
+              <li class="header-list-item">
+                <a class="header-li" href="/customers">マイページ</a>
+              </li>
+              <li class="header-list-item">
+                <a class="header-li" href="/items">商品一覧</a>
+              </li>
+              <li class="header-list-item">
+                <a class="header-li" href="/cart_items">カート</a>
+              </li>
+              <li class="header-list-item">
+                <!--<a class="header-li" href="/customers/sign_out">ログアウト</a>-->
+                <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+              </li>
+            <% else %>
+              <li class="header-list-item">
+                <a class="header-li" href="/about">About</a>
+              </li>
+              <li class="header-list-item">
+                <a class="header-li" href="/items">商品一覧</a>
+              </li>
+              <li class="header-list-item">
+                <a class="header-li" href="/customers/sign_up">新規登録</a>
+              </li>
+              <li class="header-list-item">
+                <a class="header-li" href="/customers/sign_in">ログイン</a>
+              </li>
+            <% end %>
+          </ul>
+        </nav>
+      </div>
+      
 
-      <% else %>
-        <li>
-          <%= link_to "About", about_path %>
-        </li>
-        <li>
-          <%= link_to "商品一覧", items_path %>
-        </li>
-        <li>
-          <%= link_to "新規登録", new_customer_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_customer_session_path %>
-        </li>
-      <% end %>
+            
+
     </header>
 
 
