--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,6 +1,12 @@
-<h1>About</h1>
-<p>ながのCAKEは全国発送可能なケーキ屋さんです。</p>
-<p>お子様からお年寄りまでお召し上がりいただけるよう、</p>
-<p>様々なバリエーションをご用意しております。</p>
-<p>また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</p>
-<p>ぜひご注文ください。</p>
+<div class="box">
+  <div>
+    <h1 class="contents-title">About</h1>
+  </div>
+  <div>
+    <p>ながのCAKEは全国発送可能なケーキ屋さんです。</p>
+    <p>お子様からお年寄りまでお召し上がりいただけるよう、</p>
+    <p>様々なバリエーションをご用意しております。</p>
+    <p>また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</p>
+    <p>ぜひご注文ください。</p>    
+  </div>
+</div>
