--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,15 +1,18 @@
-<h1>publicトップ</h1>
-<p>ようこそ、ながのCAKEへ！</p>
-<p>このサイトは、ケーキ販売のECサイトになります。</p>
-<p>会員でない方も商品の閲覧はできますが、</p>
-<p>購入には会員登録が必要になります。</p>
+<div class="box">
+  <h2 class="text-title">publicトップ</h1>
+  <p>ようこそ、ながのCAKEへ！</p>
+  <p>このサイトは、ケーキ販売のECサイトになります。</p>
+  <p>会員でない方も商品の閲覧はできますが、</p>
+  <p>購入には会員登録が必要になります。</p>
+  
+  <div>
+    <h2 class="text-title">新着商品</h2>
+    <a href="/items">全ての商品を見る</a>
 
-<div>
-  <%= link_to "全ての商品を見る", items_path %>
-  <h2>新着商品</h2>
-  <% @items.each do |item| %>
-    <%= attachment_image_tag item, :image, size: '100x100' %>
-    <p><%= item.name %></p>
-    <p><%= item.price %>円</p>
-  <% end %>
+    <% @items.each do |item| %>
+      <%= attachment_image_tag item, :image, size: '100x100' %>
+      <p><%= item.name %></p>
+      <p><%= item.price %>円</p>
+    <% end %>
+  </div>
 </div>
