--- a/app/assets/stylesheets/admin/items.scss
+++ b/app/assets/stylesheets/admin/items.scss
@@ -8,30 +8,20 @@
   padding-top: 40px;
 }
 
-.contents-title {
+.admin-contents-title {
   font-size: 30px;
   font-weight: bold;
 }
 
-.item-column {
-}
-
-.item-column ul {
-}
-
-.item-column li, {
+.admin-item-column li, {
   width: 18%;
   display: inline-block;
   font-size: 15px;
   font-weight: bold;
 }
 
-.item-list li {
+.admin-item-list li {
   width: 18%;
   display: inline-block;
   font-size: 15px;
-}
-
-.new-item {
-  text-align: right;
 }
