--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -4,8 +4,8 @@
   <div>
     <p>会員ID：<%= customer.id %></p>
     <%= link_to admin_customer_path(customer.id) do %>
-      <p>氏名：<%= item.name %></p>
+      <p>氏名：<%= customer.last_name %></p>
     <% end %>
-    <p>メールアドレス：<%= item.email %></p>
+    <p>メールアドレス：<%= customer.email %></p>
   </div>
 <% end %>
