--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,19 +1,34 @@
-<h1>会員情報編集</h1>
+<h2>会員情報編集</h2>
 
-<%= form_with model: @item, url: admin_item_path(@item.id), local:true do |f| %>
-  <p>商品画像</p>
-  <%= f.attachment_field :image, placeholder: "プロフィール画像" %>
-  <p>商品名</p>
-  <div>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"商品名" %>
+<%= form_with model: @customer, url: admin_customer_path, local:true do |f| %>
+  <div class="form-group">
+    <label for="fullName">氏名</label>
+    <%= f.text_field :last_name, class: '' %>
+    <%= f.text_field :first_name, class: '' %>
   </div>
-  <lavel for="inputIntroduction">商品説明</lavel>
-  <div>
-  <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"商品説明" %>
+  <div class="form-group">
+    <label for="fullNameKana">フリガナ</label>
+    <%= f.text_field :last_name_kana, class: '' %>
+    <%= f.text_field :first_name_kana, class: '' %>
   </div>
-  <lavel for="inputPrice">商品説明</lavel>
-  <div>
-  <%= f.text_field :price, autofocus: true, id:"inputPrice", placeholder:"税抜価格" %>円
+  <div class="form-group">
+    <label for="postalCode">郵便番号</label>
+    <%= f.text_field :postal_code, class: '' %>
   </div>
-  <%= f.submit "変更を保存" %>
+  <div class="form-group">
+    <label for="address">住所</label>
+    <%= f.text_field :address, class: '' %>
+  </div>
+  <div class="form-group">
+    <label for="telephoneNumber">電話番号</label>
+    <%= f.text_field :telephone_number, class: '' %>
+  </div>
+  <div class="form-group">
+    <label for="email">メールアドレス</label>
+    <%= f.text_field :email, class: '' %>
+  </div>
+  <div class="form-group">
+    <%= f.submit '編集内容を保存', class:'btn btn-success'  %>
+  </div>
+  <%= link_to "退会する", customers_comfirm_path %>
 <% end %>
