--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -8,7 +8,7 @@
   <p>住所：<%= @customer.address %></p>
   <p>電話番号：<%= @customer.telephone_number %></p>
   <p>メールアドレス：<%= @customer.email %></p>
-  <%= link_to edit_admin_item_path(@customer.id) do %>
+  <%= link_to edit_admin_customer_path(@customer.id) do %>
       <p>編集する</p>
   <% end %>
   <%= link_to admin_root_path do %>
