--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,7 +1,7 @@
 <h1>商品詳細画面</h1>
 
 <div>
-  <%= attachment_image_tag @item, :image %>
+  <%= attachment_image_tag @item, :image, size: "200x200" %>
   <p>商品名：<%= @item.name %></p>
   <p>商品説明：<%= @item.introduction %></p>
   <p>税抜価格：<%= @item.price %>円</p>
