--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -5,12 +5,12 @@
 
  <div class="form-group">
     <label for="fullName">氏名</label>
-    （姓）<%= f.last_name_field :last_name, autofocus: true, autocomplete: "last_name" %> （名）<%= f.first_name_field :first_name, autofocus: true, autocomplete: "first_name" %>
+    （姓）<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %> （名）<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
   </div>
 
   <div class="form-group">
     <label for="fullNameKana">フリガナ</label>
-    （セイ）<%= f.last_name_kana_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %> （メイ）<%= f.first_name_kana_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+    （セイ）<%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %> （メイ）<%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
   </div>
 
   <div class="form-group">
@@ -20,17 +20,17 @@
 
   <div class="form-group">
     <label for="postal_code">郵便番号（ハイフンなし）</label>
-    <%= f.postal_code_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
   </div>
 
   <div class="form-group">
     <label for="addresse">住所</label>
-    <%= f.address_field :address, autofocus: true, autocomplete: "address" %>
+    <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
   </div>
 
   <div class="form-group">
     <label for="telephoneNumber">電話番号（ハイフンなし）</label>
-    <%= f.telephone_number_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
+    <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
   </div>
 
   <div class="form-group">
