--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,8 +1,33 @@
-<% @cart_items.each do |cart_item| %>
-  <div>
-    <td>商品名：<%= cart_item.item.name %></td>  
-    <td>単価<%= (cart_item.item.price * 1.1).floor %></td>
-    <td><%= cart_item.amount %>個</td>
-    <td>小計<%= (cart_item.item.price * 1.1).floor * cart_item.amount %></td>
+<div class="container">
+  <div class="row">
+    <h2>ショッピングカート</h2>
+    <%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete %>
+    <%= link_to "買い物を続ける", items_path %>
+    <table class="table table-striped">
+      <thead>
+        <th>商品名</th>
+        <th>単価（税込）</th>
+        <th>数量</th>
+        <th>小計</th>
+      </thead>
+
+      <tbody>
+      <% @cart_items.each do |cart_item| %>
+        <tr>
+          <td><%= cart_item.item.name %></td>
+          <td><%= cart_item.item.with_tax_price %></td>
+          <td><%= cart_item.amount %>個</td>
+          
+          <td>小計<%= cart_item.subtotal %></td>
+          <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete %></td>
+        </tr>
+        <tr>
+          <td>合計金額</td>
+          <td><%= @total_price +=  cart_item.subtotal %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <%= link_to "情報入力に進む", new_order_path %>
   </div>
-<% end %>
+</div>
