--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,13 +1,35 @@
-<h1>ジャンル一覧・追加</h1>
-<%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
-  <h4>ジャンル名</h4>
-  <%= f.text_field :name %>
-  <%= f.submit '新規登録' %>
-<% end %>
-
-<div>
-  <h4>ジャンル</h4>
-  <% @genres.each do |genre| %>
-    <p><%= genre.name %> <%= link_to "編集する", edit_admin_genre_path(genre.id) %></p>
-  <% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h3 class="mt-3">ジャンル一覧・追加</h3>
+      <form class="form-inline">
+        <div class="form-group">
+        <%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
+          <%= f.label :name, "ジャンル名" %>
+          <%= f.text_field :name, class: 'form-control form-inline' %>
+          <%= f.submit '新規登録', class: 'btn btn-primary sign_up text-light' %>
+        <% end %>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ジャンル</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+          <tr>
+            <td><%= genre.name %></td>
+            <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: 'btn btn-success sign_up text-light' %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
