--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,12 +1,25 @@
-<h1>商品編集画面</h1>
-
-<%= form_with model: @item, url: admin_item_path(@item.id), local:true do |f| %>
-  <%= f.attachment_field :image, placeholder: "プロフィール画像" %>
-  <lavel for="inputName">商品名</lavel>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"商品名" %>
-  <lavel for="inputName">商品説明</lavel>
-  <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"商品説明" %>
-  <lavel for="inputName">税抜価格</lavel>
-  <%= f.text_field :price, autofocus: true, id:"inputPrice", placeholder:"税抜価格" %>円
-  <%= f.submit "変更を保存" %>
-<% end %>
+<div class="container">
+  <h1 class="mt-3">商品編集</h1>
+  <div class="row">
+    <%= form_with model: @item, url: admin_item_path(@item.id), local:true do |f| %>
+      <%= f.attachment_field :image, placeholder: "プロフィール画像" %>
+      
+      <div class="form-group">
+        <%= f.label :name,"商品名" %>
+        <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"商品名" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :introduction,"商品説明" %>
+        <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"商品説明" %>  
+      </div>
+      <div class="form-group">
+        <%= f.label :price,"税抜価格" %>
+        <%= f.text_field :price, autofocus: true, id:"inputPrice", placeholder:"税抜価格" %>円
+      </div>
+      <div class="form-group">
+        <%= f.submit "変更を保存", class: 'btn btn-success' %>
+      </div>
+      
+    <% end %>    
+  </div>
+</div>
