--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,29 +1,35 @@
+<div class="container">
+    <h1 class="mt-3">商品一覧</h1>
+    <%= link_to "商品新規登録", new_admin_item_path, class: 'btn btn-primary' %>
+  <div class="row">
+    <div class="col-md-8">
+     <table class="table">
+      <thead>
+        <tr>
+          <th>商品ID</th>
+          <th>商品名</th>
+          <th>税抜価格</th>
+          <th>ジャンル</th>
+          <th>ステータス</th>
+        </tr>
+      </thead>
 
-  <div class="contents">
-    <h1 class="admin-contents-title">商品一覧</h1>
-    <p class="new-item">
-      <a href="/admin/items/new">商品新規登録</a>
-    </p>
-    <nav class="admin-item-column">
-      <ul>
-        <li>商品ID</li>
-        <li>商品名</li>
-        <li>税抜価格</li>
-        <li>ジャンル</li>
-        <li>ステータス</li>
-      </ul>
-    </nav>
-    <div class="admin-item-list">
-      <% @items.each do |item| %>
-        <ul>
-          <li><%= item.id %></li>
-          <%= link_to admin_item_path(item.id) do %>
-            <li><%= item.name %></li>
-          <% end %>
-          <li><%= item.price %>円</li>
-          <li>ジャンル</li>
-          <li>ステータス</li>
-        </ul>
-      <% end %>
+      <tbody>
+        <% @items.each do |item| %>
+        <tr>
+          <td><%= item.id %></td>
+          <td>
+              <%= link_to admin_item_path(item.id) do %>
+                <%= item.name %>
+              <% end %>
+          </td>
+          <td><%= item.price %>円</td>
+          <td>ジャンル</td>
+          <td>ステータス</td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
     </div>
   </div>
+</div>
