--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,15 +1,28 @@
-<h1>商品新規登録画面</h1>
-<%= form_with model: @item, url: admin_items_path, local:true do |f| %>
-  <h4>商品画像</h4>
-  <%= f.attachment_field :image %>
-  <h4>商品名</h4>
-  <%= f.text_field :name %>
-  <h4>商品説明</h4>
-  <%= f.text_area :introduction %>
-  <h4>ジャンル</h4>
-  チャレンジ項目
-  <h4>税抜価格</h4>
-  <%= f.text_field :price %>
-  <%= f.submit '新規登録' %>
-<% end %>
 
+<div class="container">
+  <h1 class="mt-3">商品新規登録画面</h1>
+  <div class="row">
+    <%= form_with model: @item, url: admin_items_path, local:true do |f| %>
+    
+      <%= f.label :image,"商品画像" %>
+      <%= f.attachment_field :image %>
+      
+      <div class="form-group">
+        <%= f.label :name,"商品名" %>
+        <%= f.text_field :name %>
+      </div>
+      <div class="form-group">
+        <%= f.label :introduction,"商品説明" %>
+        <%= f.text_area :introduction %>
+      </div>
+      <div class="form-group">
+        <%= f.label :price,"税抜価格" %>
+        <%= f.text_field :price %>円
+      </div>
+      <div class="form-group">
+        <%= f.submit "変更を保存", class: 'btn btn-success' %>
+      </div>
+      
+    <% end %>    
+  </div>
+</div>
