--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,11 +1,27 @@
-<h1>商品詳細画面</h1>
 
-<div>
-  <%= attachment_image_tag @item, :image, size: "200x200" %>
-  <p>商品名：<%= @item.name %></p>
-  <p>商品説明：<%= @item.introduction %></p>
-  <p>税抜価格：<%= @item.price %>円</p>
-  <%= link_to edit_admin_item_path(@item.id) do %>
-      <p>編集する</p>
-  <% end %>
+
+<div class="container">
+  <h2 class="mt-3">商品詳細</h2>
+  <div class="row">
+  <div class="col-md-4">
+    <%= attachment_image_tag @item, :image, size: "200x200" %>
+  </div>
+  <div class="col-md-2">
+    <p>商品名</p>
+    <p>商品説明</p>
+    <p>ジャンル</p>
+    <p>税込価格</p>
+    <p>ステータス</p>
+  </div>
+  <div class="col-md-6">
+    <p><%= @item.name %></p>
+    <p><%= @item.introduction %></p>
+    <p>ジャンル</p>
+    <p><%= @item.price %>円</p>
+    <p>ステータスが表示される</p>
+  </div>
+  <div class="col-md-12">
+    <%= link_to "編集する", edit_admin_item_path(@item.id), class: 'btn btn-success' %>
+  </div>
+  </div>
 </div>
