--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,14 +1,15 @@
 <div class="container">
   <div class="row">
     <h2>ショッピングカート</h2>
-    <%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete %>
+    <%= link_to "カートを空にする", cart_items_destroy_all_path, class: 'btn btn-danger', method: :delete %>
     <%= link_to "買い物を続ける", items_path %>
-    <table class="table table-striped">
+    <table class="table">
       <thead>
         <th>商品名</th>
         <th>単価（税込）</th>
         <th>数量</th>
         <th>小計</th>
+        <th></th>
       </thead>
 
       <tbody>
@@ -16,18 +17,23 @@
         <tr>
           <td><%= cart_item.item.name %></td>
           <td><%= cart_item.item.with_tax_price %></td>
-          <td><%= cart_item.amount %>個</td>
-          
+          <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local:true do |f| %>
+            <td><%= f.select :amount, *[1..10] %>
+            <%= f.submit '変更' %></td>
+          <% end %>
           <td>小計<%= cart_item.subtotal %></td>
           <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete %></td>
         </tr>
-        <tr>
-          <td>合計金額</td>
-          <td><%= @total_price +=  cart_item.subtotal %></td>
-        </tr>
+
+          <% @total_price +=  cart_item.subtotal %>
+
       <% end %>
+      <tr>
+          <td>合計金額</td>
+          <td><%= @total_price %></td>
+      </tr>
       </tbody>
     </table>
-    <%= link_to "情報入力に進む", new_order_path %>
+    <%= link_to "情報入力に進む", new_order_path, class: 'btn btn-success' %>
   </div>
 </div>
