--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,6 +1,53 @@
 <div class="container">
   <div class="row">
-    
-    注文情報確認
+    <h2>注文情報確認</h2>
+    <div class="col-mg-8">
+      <table class="table">
+        <thead>
+          <th>商品名</th>
+          <th>単価（税込）</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th></th>
+        </thead>
+
+        <tbody>
+        <% @cart_items.each do |cart_item| %>
+          <tr>
+            <td><%= cart_item.item.name %></td>
+            <td><%= cart_item.item.with_tax_price %></td>
+            <td><%= cart_item.amount %></td>
+            <td><%= cart_item.subtotal %></td>
+            <% @total_price +=  cart_item.subtotal %>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+
+    <div class="col-mg-4">
+      <table class="table">
+        <tr>
+            <th>送料</th>
+            <th>商品合計</th>
+            <th>請求金額</th>
+        </tr>
+        <tr>
+            <td><%= @order.shopping_cost %></td>
+            <td><%= @total_price %></td>
+            <td><%= @order.total_payment = @total_price + @order.shopping_cost %></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="row">
+    <h3>支払方法</h3>
+    <p><%= @order.payment_method %></p>
+  </div>
+  <div class="row">
+    <h3>お届け先</h3>
+    <p>〒<%= @order.postal_code %><%= @order.address %></p>
+    <p><%= @order.name %></p>
   </div>
 </div>
