--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,1 +1,31 @@
-<h1>注文履歴画面</h1>
+<div class="container">
+  <div class="row">
+    <h1>注文履歴画面</h1>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>注文日</th>
+          <th>配送先</th>
+          <th>注文商品</th>
+          <th>支払金額</th>
+          <th>ステータス</th>
+          <th>注文詳細</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders. each do |order| %>
+        <tr>
+          <td><%= order.created_at %></td>
+          <td>〒<%= order.postal_code %></br>
+          <%= order.address %></br>
+          <%= order.name %></td>
+          <td><%= order.order_details.name %></td>
+          <td><%= order.total_payment %>円</td>
+          <td>ステータス表示</td>
+          <td><%= link_to "表示する", order_path(order.id), class: "btn btn-success" %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
