--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,3 +1,31 @@
 <h1>管理者トップページ</h1>
 
 <h2>注文履歴一覧</h2>
+<div class="container">
+  <div class="row">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>購入日時</th>
+          <th>購入者</th>
+          <th>注文個数</th>
+          <th>注文ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders. each do |order|  %>
+        <tr>
+          <td>
+            <%= link_to  admin_order_path(order.id) do %>
+              <%= order.created_at %>
+            <% end %>
+          </td>
+          <td><%= order.name %></td>
+          <td>まだ</td>
+          <td>ステータス表示される</td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
