--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -9,21 +9,22 @@
           <div class="form-group">
             <%= f.label :address, "住所" %>
             <%= f.text_field :address, class: '' %>
-          </div>          
+          </div>
           <div class="form-group">
             <%= f.label :name, "宛名" %>
             <%= f.text_field :name, class: '' %>
           </div>
           <div class="form-group">
-            <%= f.submit '新規登録' %>
+            <%= f.submit '新規登録', class: '' %>
           </div>
         <% end %>
-    
-      <table class="table table-striped">
+
+      <table class="table">
         <thead>
           <th>郵便番号</th>
           <th>住所</th>
           <th>宛名</th>
+          <th></th>
         </thead>
         <tbody>
         <% @addresses.each do |address| %>
@@ -31,8 +32,8 @@
             <td><%= address.postal_code %></td>
             <td><%= address.address %></td>
             <td><%= address.name %></td>
-            <td><%= link_to "編集する", edit_address_path(address.id), class: "btn" %>
-                <%= link_to "削除する", address_path(address.id), class: "btn", method: :delete %>
+            <td><%= link_to "編集する", edit_address_path(address.id), class: "btn btn-success" %>
+                <%= link_to "削除する", address_path(address.id), class: "btn btn-danger", method: :delete %>
             </td>
           </tr>
           <% end %>
