--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -26,7 +26,7 @@
       <div class="form-group">
         <%= f.radio_button :address_option, 1 %>
         <%= f.label :address,"登録済みの住所" %>
-        <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :full_address) %>
+        <%= f.select :address_id, options_from_collection_for_select(current_customer.addresses, :id, :full_address) %>
       </div>
       <div class="form-group">
         <%= f.radio_button :address_option, 2 %>
