--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -8,11 +8,6 @@
       <tr><th>支払方法</th><td><%= @order.payment_method_i18n %></td></tr>
       <tr><th>ステータス</th><td></td></tr>
     </table>
-    <table class="table">
-      <tr><th>商品合計</th><td></td></tr>
-      <tr><th>配送料</th><td><%= @order.shopping_cost %></td></tr>
-      <tr><th>ご請求額</th><td><%= @order.total_payment %></td></tr>
-    </table>
   </div>
 
   <div class="row">
@@ -26,13 +21,21 @@
         </tr>
       </thead>
       <tbody>
+        <% @order_details. each do |order_detail| %>
         <tr>
-          <td></td>
-          <td></td>
-          <td><%= @order.amount %></td>
-          <td></td>
+          <td><%= order_detail.item.name %></td>
+          <td><%= order_detail.item.with_tax_price %></td>
+          <td><%= order_detail.amount %></td>
+          <td><%= order_detail.subtotal %></td>
+          <% @total_price +=  order_detail.subtotal %>
         </tr>
+        <% end %>
       </tbody>
-      </div>
+    </table>
+    <table class="table">
+      <tr><th>商品合計</th><td><%= @total_price %></td></tr>
+      <tr><th>配送料</th><td><%= @order.shopping_cost %></td></tr>
+      <tr><th>ご請求額</th><td><%= @order.total_payment %></td></tr>
+    </table>
   </div>
 </div>
