--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -8,10 +8,6 @@
   <p>住所：<%= @customer.address %></p>
   <p>電話番号：<%= @customer.telephone_number %></p>
   <p>メールアドレス：<%= @customer.email %></p>
-  <%= link_to edit_admin_customer_path(@customer.id) do %>
-      <p>編集する</p>
-  <% end %>
-  <%= link_to admin_root_path do %>
-      <p>注文履歴一覧を見る</p>
-  <% end %>
+  <%= link_to "編集する", edit_admin_customer_path(@customer.id), class: 'btn btn-success' %>
+  <%= link_to "注文履歴一覧を見る", admin_root_path, class: 'btn btn-success' %>
 </div>
