--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -21,7 +21,7 @@
             <% end %>
           </td>
           <td><%= order.name %></td>
-          <td>まだ</td>
+          <td><%= order.order_details.count %></td>
           <td>ステータス表示される</td>
         </tr>
         <% end %>
