--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -19,7 +19,7 @@
               <%= customer.last_name %><%= customer.first_name %></td>
             <% end %>
           <td><%= customer.email %></td>
-          <td>有効/退会</td>
+          <td><%= customer.is_active %></td>
         </tr>
         <% end %>
       </tbody>
