--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -5,4 +5,6 @@
 </p>
 
 <%= link_to '退会しない', customer_path(current_customer.id), class: 'btn btn-success' %>
-<%= link_to '退会する', root_path, method: :patch, class: 'btn btn-danger' %>
+
+</br>
+<%= link_to '退会する', customers_withdrawal_path , method: :patch, class: 'btn btn-danger' %>
