[Fix]ジャンルの新規投稿を修正

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <h1 class="mt-3">商品一覧</h1>
-    <%= link_to "商品新規登録", new_admin_item_path, class: 'btn btn-primary' %>
+    <%= link_to "商品新規登録", new_admin_item_path, class: 'btn btn-primary m-2' %>
   <div class="row">
     <div class="col-md-8">
      <table class="table">
