--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,13 +1,19 @@
-<h1>会員詳細</h1>
-
-<div>
-  <p>会員ID：<%= @customer.id %></p>
-  <p>氏名：<%= @customer.last_name %> <%= @customer.first_name %></p>
-  <p>フリガナ：<%= @customer.last_name_kana %> <%= @customer.first_name_kana %></p>
-  <p>郵便番号：<%= @customer.postal_code %></p>
-  <p>住所：<%= @customer.address %></p>
-  <p>電話番号：<%= @customer.telephone_number %></p>
-  <p>メールアドレス：<%= @customer.email %></p>
-  <%= link_to "編集する", edit_admin_customer_path(@customer.id), class: 'btn btn-success' %>
-  <%= link_to "注文履歴一覧を見る", admin_root_path, class: 'btn btn-success' %>
+<div class="container">
+  <div class="row">
+    <table class="table">
+      <h2 class="m-2">会員詳細</h1>
+      <tr><th>会員ID</th><td><%= @customer.id %></td></tr>
+      <tr><th>氏名</th><td><%= @customer.last_name %> <%= @customer.first_name %></td></tr>
+      <tr><th>フリガナ</th><td><%= @customer.last_name_kana %> <%= @customer.first_name_kana %></td></tr>
+      <tr><th>郵便番号</th><td><%= @customer.postal_code %></td></tr>
+      <tr><th>住所</th><td><%= @customer.address %></td></tr>
+      <tr><th>電話番号</th><td><%= @customer.telephone_number %></td></tr>
+      <tr><th>メールアドレス</th><td><%= @customer.email %></td></tr>
+      <tr><th>ステータス</th><td><%= @customer.is_active ? '退会' : '有効' %></td></tr>
+    </table>
+  </div>
+  <div class="row">
+    <%= link_to "編集する", edit_admin_customer_path(@customer.id), class: 'btn btn-success m-2' %>
+    <%= link_to "注文履歴一覧を見る", admin_root_path, class: 'btn btn-success m-2' %>
+  </div>
 </div>
