--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h3 class="mt-3">ジャンル一覧・追加</h3>
-      <form class="form-inline">
+      <h2 class="mt-3">ジャンル一覧・追加</h3>
+      <div class="form-inline">
         <div class="form-group">
         <%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
           <%= f.label :name, "ジャンル名" %>
@@ -10,12 +10,12 @@
           <%= f.submit '新規登録', class: 'btn btn-primary sign_up text-light' %>
         <% end %>
         </div>
-      </form>
+      </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-4">
-      <table class="table">
+      <table class="table m-2">
         <thead>
           <tr>
             <th>ジャンル</th>
