--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,8 +1,7 @@
-<h1>管理者トップページ</h1>
-
-<h2>注文履歴一覧</h2>
 <div class="container">
+
   <div class="row">
+    <h2 class="m-2">注文履歴一覧</h2>
     <table class="table">
       <thead>
         <tr>
@@ -21,7 +20,11 @@
             <% end %>
           </td>
           <td><%= order.name %></td>
-          <td><%= order.order_details.count %></td>
+          <% order.order_details. each do |order_detail|  %>
+            <% order_detail.amount %>
+            <% @total_amount += order_detail.amount %>
+          <% end %>
+          <td><%= @total_amount %></td>
           <td>ステータス表示される</td>
         </tr>
         <% end %>
