--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,5 +1,5 @@
-会員の注文詳細画面
 <div class="container">
+  <h1 class="m-2">注文履歴詳細</h1>
   <div class="row">
     <div class="customer-info">
       <div class="form-group">
