--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <h2>ショッピングカート</h2>
     <%= link_to "カートを空にする", cart_items_destroy_all_path, class: 'btn btn-danger', method: :delete %>
-    <%= link_to "買い物を続ける", items_path %>
+    <%= link_to "買い物を続ける", root_path %>
     <table class="table">
       <thead>
         <th>商品名</th>
@@ -34,6 +34,8 @@
       </tr>
       </tbody>
     </table>
-    <%= link_to "情報入力に進む", new_order_path, class: 'btn btn-success' %>
+    <% if current_customer.cart_items.exists? %>
+      <%= link_to "情報入力に進む", new_order_path, class: 'btn btn-success' %>
+    <% end %>
   </div>
 </div>
