--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="form-group">
     <label for="telephoneNumber">電話番号</label>
-    <%= f.text_field :telephoneNumber, class: '' %>
+    <%= f.text_field :telephone_number, class: '' %>
   </div>
   <div class="form-group">
     <label for="email">メールアドレス</label>
