--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -22,7 +22,9 @@
       <div class="new-item-list">
         <% @items.each do |item| %>
           <div class="new-item">
-            <%= attachment_image_tag item, :image, size: "150x150" %>
+            <%= link_to item_path(item.id) do %>
+              <%= attachment_image_tag item, :image, size: "150x150" %>
+            <% end %>
             <p><%= item.name %></p>
             <p><%= item.price %>円</p>
           </div>
