--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,55 +1,61 @@
-<h2>新規会員登録</h2>
+<div class="container">
+  <div class="row">
 
-<%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
-  <%= render "publics/shared/error_messages", resource: resource %>
+    <h2 class="m-auto">新規会員登録</h2>
 
- <div class="form-group">
-    <label for="fullName">氏名</label>
-    （姓）<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %> （名）<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+    <%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
+      <%= render "publics/shared/error_messages", resource: resource %>
+
+     <div class="form-group">
+        <label for="fullName">氏名</label>
+        （姓）<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %> （名）<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+      </div>
+
+      <div class="form-group">
+        <label for="fullNameKana">フリガナ</label>
+        （セイ）<%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %> （メイ）<%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+      </div>
+
+      <div class="form-group">
+        <label for="email">メールアドレス</label>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+
+      <div class="form-group">
+        <label for="postal_code">郵便番号（ハイフンなし）</label>
+        <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+      </div>
+
+      <div class="form-group">
+        <label for="addresse">住所</label>
+        <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
+      </div>
+
+      <div class="form-group">
+        <label for="telephoneNumber">電話番号（ハイフンなし）</label>
+        <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
+      </div>
+
+      <div class="form-group">
+        <label for="password">パスワード</label>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "Sign up" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="form-group">
-    <label for="fullNameKana">フリガナ</label>
-    （セイ）<%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %> （メイ）<%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+  <div class="row">
+    <h3>既に登録済みの方</h3>
+    <p><%= link_to "こちら",new_customer_session_path %> からログインしてください</p>
   </div>
-
-  <div class="form-group">
-    <label for="email">メールアドレス</label>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="form-group">
-    <label for="postal_code">郵便番号（ハイフンなし）</label>
-    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
-  </div>
-
-  <div class="form-group">
-    <label for="addresse">住所</label>
-    <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
-  </div>
-
-  <div class="form-group">
-    <label for="telephoneNumber">電話番号（ハイフンなし）</label>
-    <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
-  </div>
-
-  <div class="form-group">
-    <label for="password">パスワード</label>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<h3>既に登録済みの方</h3>
-<p><%= link_to "こちら",new_customer_session_path %> からログインしてください</p>
+</div>
